# 1c-v8-unpack

./: .flake8  .gitignore  pyproject.toml
test_data/: ExtForm.epf  index.osml  index_module.osml
tests/: test_main.py
v8unpack/: container.py  metadata.py  osml.py
