[tool.poetry]
name = "1c-v8-unpack"
version = "0.1.0"
description = ""
authors = ["Denis Terentev <goboden@yandex.ru>"]
readme = "README.md"
packages = [{include = "v8unpack"}]

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^6.0.0"
yapf = "^0.32.0"
mypy = "^1.2.0"
pytest = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = "True"
log_cli_level = "INFO"
